--- a/css/styles.css
+++ b/css/styles.css
@@ -256,8 +256,7 @@ a.custom-card:hover {
 }
 
 .prodImagenesSingle {
-  border: 0.1px solid gray;
-  box-shadow: 2px 2px darkslategray;
+  box-shadow: 0px 6px 10px 0.5px grey;
   border-radius: 5px;
   width: 30%;
   margin-top: 2%;
@@ -282,7 +281,6 @@ a.custom-card:hover {
   flex-direction: row;
   flex-wrap: wrap;
   gap: 10px;
-  width: 100%;
 }
 
 .direccionItem {
@@ -309,4 +307,8 @@ a.custom-card:hover {
   gap: 55%;
   justify-content: center;
   align-items: center;
+}
+
+.error-compra {
+  border-color: red !important;
 }
