--- a/css/styles.css
+++ b/css/styles.css
@@ -191,14 +191,14 @@ a.custom-card:hover {
 
 /* MIOOO */
 
-#autosCatDes {
+#CatDes {
   font-size: 120%;
   text-align: center;
   font-weight: lighter;
   margin-bottom: 4%;
 }
 
-#h1Autos {
+#h1Cat {
   text-align: center;
   margin-top: 2%;
   font-size: 200%;
@@ -247,18 +247,9 @@ a.custom-card:hover {
 /* MIOOO PRODUCTOS */
 
 .prodImagenes {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  width: 100%;
-  gap: 2%;
-
-}
-
-.prodImagenesSingle {
   box-shadow: 0px 6px 10px 0.5px grey;
-  border-radius: 5px;
-  width: 30%;
+  border-radius: 20px;
+  width: 50%;
   margin-top: 2%;
 }
 
